openapi enum
