# src/main/kotlin/com/example/springbootopenapitypescriptcodegen/model/Mood.kt
@@ -1,0 +1,16 @@
+package com.example.springbootopenapitypescriptcodegen.model
+
+enum class Mood {
+    SAD,
+    HAPPY,
+    ANGRY,
+    EXCITED,
+    ENERGETIC,
+    CRANKY,
+    GLOOMY,
+    CHEERFUL,
+    GRATEFUL,
+    AMUSED,
+    BORED,
+    CURIOUS;
+}
