# src/main/kotlin/com/example/springbootopenapitypescriptcodegen/model/Person.kt
@@ -1,5 +1,6 @@
 package com.example.springbootopenapitypescriptcodegen.model
 
+import io.swagger.v3.oas.annotations.media.Schema
 import java.util.*
 
 class Person(
@@ -7,5 +8,9 @@ class Person(
     val firstName: String,
     val middleName: String? = null,
     val familyName: String,
-    val dateOfBirth: Date
+    val dateOfBirth: Date,
+    @Schema(enumAsRef = true)
+    val mood: Mood,
+    @Schema(enumAsRef = true)
+    val moodYesterday: Mood
 )
